--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "mysql2": "^3.9.2",
     "prisma": "^6.14.0"
   },
   "devDependencies": {
